--- a/text.html
+++ b/text.html
@@ -46,7 +46,7 @@
 
     <!--Words. These are comments. Big banger pogchamp 69 420-->
 
-    <p> <a href="index.html"> Go home, bitch</a></p>
+    <p> <a href="index (remastered).html"> Go home, bitch</a></p>
 </body>
 
 </html>
