--- a/Class ID Demo.html
+++ b/Class ID Demo.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Silly Boy Island</title>
+    <title>class id demo</title>
 </head>
 <style>
     body {
