--- a/index (remastered).html
+++ b/index (remastered).html
@@ -46,7 +46,29 @@
             margin: 50px;
             border: 10px solid #ff2f00;
         }
-    
+    ul{
+        margin:0;
+        padding:0;
+        list-style-type: none;
+    }
+    li a{
+        display:block;
+        background: #0fcb22;
+
+    }
+    a.antidepressants {
+        background: #ff0000;
+            color: #000000;
+            margin: 50px;
+            border: 1px solid #ff0000;
+            }
+            a:hover {
+                background: #860000;
+            color: #000000;
+            margin: 50px;
+            border: 1px solid #ff0000;
+            text-size-adjust: 1px;
+            }
 </style>
 <div id="four">
 <h1>Silly Boy Island</h1>
@@ -68,6 +90,9 @@
    <p class="AM" id="Hombre">Star Wars: <span class="Filipe">  Revenge of the Sith </span></p>
 </div>
 
+
+
+
    <div id="one"> My name is Bill. I may just be a box, but I'm a composer of great music.</div>
 
 
@@ -80,6 +105,11 @@
         </li>
         <li><a href=index.html>The Original Version of This Site</a></li>
     </ul></div>
+
+    <hr>
+<p>
+<p><a class="antidepressants" href="https://youtu.be/Eth5oJeaHX4?si=n_Kl-JNECkNp3vx3">DO NOT PUSH THIS BUTTON</p></a> 
+</p>
 </body>
 
 </html>
