--- a/links.html
+++ b/links.html
@@ -53,6 +53,8 @@
             
 <body>
 
+<p><a href=index.html>Go Home</a></p>
+
 <p><a class="antidepressants" href="https://youtu.be/Eth5oJeaHX4?si=n_Kl-JNECkNp3vx3">DO NOT PUSH THIS BUTTON</p></a> 
 
 <p><a class="anal-beads" href="https://youtu.be/Eth5oJeaHX4?si=n_Kl-JNECkNp3vx3">DO NOT PUSH THIS BUTTON</p></a> 
