--- a/index-old.html
+++ b/index-old.html
@@ -26,9 +26,8 @@
 
    <h1>Websites</h1>
     <ul>
-        <li><a href="text.html">Text Page (Demo)</a>
-        
-        </li>
+        <li><a href="text.html">Text Page (Demo)</a></li>
+        <p><a href=index.html>Go Home</a></p>
     </ul>
     <hr>
     <h1>About Me</h1>
