--- a/class-id-demo.html
+++ b/class-id-demo.html
@@ -47,7 +47,7 @@
         <li><a href="text.html">Text Page (Demo)</a>
         
         </li>
-        <li><a href=index.html>The Original Version of This Site</a></li>
+        <li><a href=index.html>Go Home</a></li>
     </ul>
 </body>
 
