--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
             <li><a href="links.html">Links Page (Demo)</a></li>
             <li><a href="lists.html">Lists Page (Demo)</a></li>
             <li><a href="images.html">Images Page (Demo)</a></li>
+            <li><a href="boxes.html">Floats (Demo)</a></li>
             <li><a href="transforms.html">Transforms Page (Demo)</a></li>
+            <li><a href="floats.html">Floats (Demo)</a></li>
+            <li><a href="grid.html">Floats (Demo)</a></li>
             <li><a href=index-old.html>The Original Version of This Site</a></li>
         </ul>
     </div>
@@ -147,4 +150,5 @@
 
 </body>
 
+</html>
 </html>
